--- a/portfolio.html
+++ b/portfolio.html
@@ -150,15 +150,50 @@
     </main>
     <!-- Footer Section -->
     <footer class="footer">
-        <div class="container section-footer">
-            <!-- Logo -->
-            <a class="footer-logo link" href="/goit-markup-hw-02/">
-                <span class="footer-logo-web">web</span><span class="footer-logo-studio">studio</span>
-            </a>
-            <p class="footer-paragraph">Increase the flow of customers and<br>
-                sales for your business with digital<br>
-                marketing & growth solutions.</p>
-        </div>
+        <section class="section-footer">
+            <div class="container paragraph-container">
+                <!-- Logo -->
+                <a class="footer-logo link" href="/goit-markup-hw-02/">
+                    <span class="footer-logo-web">web</span><span class="footer-logo-studio">studio</span>
+                </a>
+                <p class="footer-paragraph">Increase the flow of customers and<br>
+                    sales for your business with digital<br>
+                    marketing & growth solutions.</p>
+            </div>
+            <div class="socmed-container">
+                <h4 class="footer-socmed-header">Social media</h4>
+                <ul class="footer-socmed-links list">
+                    <li class="footer-socmed-link-items">
+                        <a class="footer-socmed-link link" href="/goit-markup-hw-04/">
+                            <svg class="socmed-icon" width="16" height="16">
+                                <use href="./images/sprite/icons.svg#instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-socmed-link-items">
+                        <a class="footer-socmed-link link" href="/goit-markup-hw-04/">
+                            <svg class="socmed-icon" width="16" height="16">
+                                <use href="./images/sprite/icons.svg#twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-socmed-link-items">
+                        <a class="footer-socmed-link link" href="/goit-markup-hw-04/">
+                            <svg class="socmed-icon" width="16" height="16">
+                                <use href="./images/sprite/icons.svg#facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-socmed-link-items">
+                        <a class="footer-socmed-link link" href="/goit-markup-hw-04/">
+                            <svg class="socmed-icon" width="16" height="16">
+                                <use href="./images/sprite/icons.svg#linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </footer>
 </body> 
 </html>
