update pseudo elements and footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -151,7 +151,7 @@
     <!-- Footer Section -->
     <footer class="footer">
         <section class="section-footer">
-            <div class="container paragraph-container">
+            <div class="paragraph-container">
                 <!-- Logo -->
                 <a class="footer-logo link" href="/goit-markup-hw-04/">
                     <span class="footer-logo-web">web</span><span class="footer-logo-studio">studio</span>
