--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Provides digital and marketing growth solutions.">
-    <title>Mateo, Ruby L.</title>
+    <title>Mateo, Ruby L. HW-04</title>
     <link rel="stylesheet" href="./css/style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -150,49 +150,51 @@
     </main>
     <!-- Footer Section -->
     <footer class="footer">
-        <section class="section-footer">
-            <div class="paragraph-container">
+        <section>
+            <div class="container paragraph-container">
                 <!-- Logo -->
-                <a class="footer-logo link" href="/goit-markup-hw-04/">
-                    <span class="footer-logo-web">web</span><span class="footer-logo-studio">studio</span>
-                </a>
-                <p class="footer-paragraph">Increase the flow of customers and<br>
-                    sales for your business with digital<br>
-                    marketing & growth solutions.</p>
-            </div>
-            <div class="socmed-container">
-                <h4 class="footer-socmed-header">Social media</h4>
-                <ul class="footer-socmed-links list">
-                    <li class="footer-socmed-link-items">
-                        <a class="footer-socmed-link link" href="/goit-markup-hw-04/">
-                            <svg class="socmed-icon" width="16" height="16">
-                                <use href="./images/sprite/icons.svg#instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-socmed-link-items">
-                        <a class="footer-socmed-link link" href="/goit-markup-hw-04/">
-                            <svg class="socmed-icon" width="16" height="16">
-                                <use href="./images/sprite/icons.svg#twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-socmed-link-items">
-                        <a class="footer-socmed-link link" href="/goit-markup-hw-04/">
-                            <svg class="socmed-icon" width="16" height="16">
-                                <use href="./images/sprite/icons.svg#facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-socmed-link-items">
-                        <a class="footer-socmed-link link" href="/goit-markup-hw-04/">
-                            <svg class="socmed-icon" width="16" height="16">
-                                <use href="./images/sprite/icons.svg#linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+                <div class="logo-container">
+                    <a class="footer-logo link" href="/goit-markup-hw-04/">
+                        <span class="footer-logo-web">web</span><span class="footer-logo-studio">studio</span></a>
+                    <p class="footer-paragraph">Increase the flow of customers and<br>
+                        sales for your business with digital<br>
+                        marketing & growth solutions.
+                    </p>
+                </div>
+                <div class="socmed-container">
+                    <h4 class="footer-socmed-header">Social media</h4>
+                    <ul class="footer-socmed-links list">
+                        <li class="footer-socmed-link-items">
+                            <a class="footer-socmed-link link" href="/goit-markup-hw-04/">
+                                <svg class="socmed-icon" width="16" height="16">
+                                    <use href="./images/sprite/icons.svg#instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-socmed-link-items">
+                            <a class="footer-socmed-link link" href="/goit-markup-hw-04/">
+                                <svg class="socmed-icon" width="16" height="16">
+                                    <use href="./images/sprite/icons.svg#twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-socmed-link-items">
+                            <a class="footer-socmed-link link" href="/goit-markup-hw-04/">
+                                <svg class="socmed-icon" width="16" height="16">
+                                    <use href="./images/sprite/icons.svg#facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-socmed-link-items">
+                            <a class="footer-socmed-link link" href="/goit-markup-hw-04/">
+                                <svg class="socmed-icon" width="16" height="16">
+                                    <use href="./images/sprite/icons.svg#linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>    
         </section>
     </footer>
 </body> 
